--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@app/*": ["src/*"],
+      "@decorator/*": ["src/decorator/*"],
+      "@prisma/*": ["src/prisma/*"]
+    }
   }
 }
