Feat: Add local passport strategy and guard

--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+JWT_SECRET="secret"
+EXPIRE_TIME="7d"
+
 DATABASE_URL="postgresql://postgres:hoplin1234!@localhost:5432/template?schema=public"
