Fix: Move decorator to sub-directory of common

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@app/*": ["src/*"],
-      "@decorator/*": ["src/decorator/*"],
+      "@decorator/*": ["src/common/decorator/*"],
       "@prisma/*": ["src/prisma/*"]
     }
   }
