--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "db:up": "docker-compose -f ./deployments/database/docker-compose.yaml up -d",
-    "db:dev:push": "npx prisma db push",
+    "db:down": "docker-compose -f ./deployments/database/docker-compose.yaml down",
+    "db:push": "npx prisma db push",
     "db:migrate": "npx prisma migrate --name $1",
     "db:generate": "npx prisma generate",
     "build": "nest build",
