--- a/.env
+++ b/.env
@@ -7,4 +7,13 @@
 JWT_SECRET="secret"
 EXPIRE_TIME="7d"
 
+# Prisma PostgreSQL credential
 DATABASE_URL="postgresql://postgres:hoplin1234!@localhost:5432/template?schema=public"
+
+# Kysley PostgreSQL credentail
+DATABASE_HOST="127.0.0.1"
+DATABASE_USER="postgres"
+DATABASE_PASSWORD="hoplin1234!"
+DATABASE_NAME="template"
+DATABASE_PORT="5432"
+DATABASE_MAX_CONNECTION_POOL="10"
