--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "kysely": "^0.27.3",
     "lodash": "^4.17.21",
+    "nestjs-kysely": "^0.1.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.5",
     "prisma": "^5.12.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -57,6 +60,7 @@
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/pg": "^8.11.6",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
