--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "pg": "^8.11.5",
     "prisma": "^5.12.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -62,6 +63,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.11.6",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
