Fix: Fix PR template and build workflow path

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -4,7 +4,8 @@ on:
     branches:
       - main
     paths:
-      - '**.ts'
+      - 'src/**'
+      - '.github/workflows/**'
 run-name: Application Build Test
 jobs:
   build:
