--- a/.github/workflows/pnpm-build-test.yml
+++ b/.github/workflows/pnpm-build-test.yml
@@ -24,6 +24,6 @@ jobs:
           version: 8
           run_install: false
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
       - name: Check Application Build
         run: pnpm build
