Chore: Support sentry with exception filter

--- a/.env
+++ b/.env
@@ -17,3 +17,6 @@ DATABASE_PASSWORD="hoplin1234!"
 DATABASE_NAME="template"
 DATABASE_PORT="5432"
 DATABASE_MAX_CONNECTION_POOL="10"
+
+# Sentry DSN
+SENTRY_DSN=""
