Chore: Add docker

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ JWT_SECRET="secret"
 EXPIRE_TIME="7d"
 
 # Prisma PostgreSQL credential
-DATABASE_URL="postgresql://postgres:hoplin1234!@localhost:5432/template?schema=public"
+DATABASE_URL="postgresql://postgres:hoplin1234!@localhost:5432/databases?schema=public"
 
 # Sentry DSN
 SENTRY_DSN=""
