Fix: Fix fix admin to be set with env

--- a/.docker.env
+++ b/.docker.env
@@ -9,6 +9,9 @@ EXPIRE_TIME="7d"
 DATABASE_URL="postgresql://postgres:hoplin1234!@db:5432/databases?schema=public"
 SENTRY_DSN=""
 
+ADMIN_EMAIL="admin@admin.com"
+ADMIN_PASSEWORD="admin"
+
 # DB Service
 POSTGRES_PASSWORD=hoplin1234!
 POSTGRES_DB=databases
