--- a/.env
+++ b/.env
@@ -10,5 +10,8 @@ EXPIRE_TIME="7d"
 # Prisma PostgreSQL credential
 DATABASE_URL="postgresql://postgres:hoplin1234!@localhost:5432/databases?schema=public"
 
+ADMIN_EMAIL="admin@admin.com"
+ADMIN_PASSEWORD="admin"
+
 # Sentry DSN
 SENTRY_DSN=""
